openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: one-gate-payment
  labels:
    app: frontend-service
spec:
  selector:
    app: frontend-service
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
