openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-service-route
  namespace: one-gate-payment
  labels:
    app: frontend-service
spec:
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: proxy
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
